--- a/index.html
+++ b/index.html
@@ -797,7 +797,8 @@
 
             <ul class="copyright">
                <li>&copy; Copyright 2014 CeeVee</li>
-               <li>Design by <a href="http://www.styleshout.com/" title="Styleshout" target="_blank">Styleshout</a></li>   
+               <li>Design by <a href="http://www.styleshout.com/" title="Styleshout" target="_blank">Styleshout</a></li>
+	       <li> <a target="_blank" href="http://www.themezy.com">Design Credit: Themezy!</a> </li>
             </ul>
 
          </div>
