--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/jack-peisel-18ba41147/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
 
             <ul class="copyright">
