Change to capitalization

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-05" title="">
-                        <img alt="" src="images/portfolio/space.png">
+                        <img alt="" src="images/portfolio/space.PNG">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Space Invaders</h5>
