Change to capitalization(all)

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
-                        <img alt="" src="images/portfolio/openstack.png">
+                        <img alt="" src="images/portfolio/openstack.PNG">
                         <!--Photo from https://www.openstack.org/software/   -->
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -330,7 +330,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
-                        <img alt="" src="images/portfolio/egos.png">
+                        <img alt="" src="images/portfolio/egos.PNG">
                         <!--Image taken from https://en.wikipedia.org/wiki/Operating_system   -->
 
                         <div class="overlay">
@@ -372,7 +372,7 @@
 
          <div id="modal-01" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/openstack.png" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/openstack.PNG" alt="" />
               <!--Photo from https://www.openstack.org/software/   -->
 
 		      <div class="description-box">
@@ -429,7 +429,7 @@
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/egos.png" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/egos.PNG" alt="" />
               <!--Screenshot taken from https://www.cs.cornell.edu/courses/cs4411/2021sp/   -->
 
 		      <div class="description-box">
@@ -448,7 +448,7 @@
 
          <div id="modal-05" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/space2.png" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/space2.PNG" alt="" />
 
 		      <div class="description-box">
 			      <h4>Space Invaders</h4>
