Updates to image sizes, added profile pic, etc

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/profilepic.jpg" alt="" />
+            <img class="profile-pic"  src="images/jack.png" alt="" />
 
          </div>
 
@@ -177,6 +177,25 @@
 
          <div class="nine columns main-col">
 
+             <div class="row item">
+
+                <div class="twelve columns">
+
+                   <h3>Red Hat Software</h3>
+                   <p class="info">Quality Engineering Intern <span>&bull;</span> <em class="date">May 2021 - August 2021</em></p>
+
+                   <ul>
+                       <li>• Full time summer internship on the Interoperability team.</li>
+                       <li>• Continued development work for janitorial tool in Python.</li>
+                       <li>• Deployment of janitorial tool using Jenkins CASC and declarative pipelines.</li>
+                       <li>• Standardized and upgraded Interoperability-testing Scenarios for Red Hat Products. </li>
+
+                   </ul>
+
+                </div>
+
+             </div> <!-- item end -->
+
             <div class="row item">
 
                <div class="twelve columns">
@@ -189,25 +208,6 @@
                       <li>• Design, development, and deployment work for automation of cleaning OpenStack tenants - janitorial tool is publicly available on GitHub.</li>
                       <li>• Containerized and used stress tools to test OpenShift/Kubernetes Clusters.</li>
                       <li>• Participated in code reviews, attended and presented at team meetings, and managed my assigned tasks in Jira<li>
-
-                  </ul>
-
-               </div>
-
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>Red Hat Software</h3>
-                  <p class="info">Quality Engineering Intern <span>&bull;</span> <em class="date">May 2021 - August 2021</em></p>
-
-                  <ul>
-                      <li>• Full time summer internship on the Interoperability team.</li>
-                      <li>• Continued development work for janitorial tool in Python.</li>
-                      <li>• Deployment of janitorial tool using Jenkins CASC and declarative pipelines.</li>
-                      <li>• Standardized and upgraded Interoperability-testing Scenarios for Red Hat Products. </li>
 
                   </ul>
 
@@ -295,7 +295,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
-                        <img alt="" src="images/portfolio/modals/coup.jpg">
+                        <img alt="" src="images/portfolio/coup.jpg">
                         <!--Photo from https://www.ultraboardgames.com/coup/game-rules.php   -->
                         <div class="overlay">
                            <div class="portfolio-item-meta">
